EXOJCR-479 Profiles for automated testing